--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,526 @@
-/* No CSS */
+:root {
+  --clr-light: white;
+  --clr-neutral: gray;
+  --clr-purple: #2C264A;
+  --clr-peach: #E18975;
+  --clr-green: #39B54A;
+  --clr-teal: #5DA7A3;
+  --fs-menu: 1.25rem;
+  --fs-primary: .813rem;
+  --gap: .625rem;
+}
+
+body {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-family: 'Nunito', sans-serif;
+}
+
+ul, li, p {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  list-style: none;
+}
+
+main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+nav {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  min-width: 190px;
+  height: 100vh;
+  background-color: var(--clr-purple);
+  padding: 2em 0;
+}
+
+nav a {
+  padding: .8rem 1rem;
+  color: inherit;
+  text-decoration: none;
+  display: block;
+}
+
+nav a:hover {
+  color: var(--clr-peach);
+}
+
+nav img {
+  max-width: 78px;
+}
+
+nav .menu-title {
+  color: var(--clr-light);
+  text-transform: uppercase;
+  color: var(--clr-teal);
+  font-size: 1.85rem;
+  margin-bottom: 2em;
+  padding: 0 1em;
+  text-align: center;
+}
+
+nav ul.nav-menu {
+  color: var(--clr-light);
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
+
+nav ul.nav-menu li {
+  list-style: none;
+  border-width: 0;
+  border-top-width: 1px;
+  border-color: var(--clr-peach);
+  border-style: solid;
+  position: relative;
+}
+
+nav ul.nav-menu li.active a {
+  background-color: var(--clr-peach);
+  color: var(--clr-light);
+}
+
+nav ul.nav-menu li.active a::after {
+  content: '';
+  display: inline-block;
+  position: absolute;
+  right: -38px;
+  top: 0;
+  width: 0;
+  height: 0;
+  border-color: transparent;
+  border-style: solid;
+  border-width: 22px 22px 22px 16px;
+  border-left-color: var(--clr-peach);
+}
+
+nav ul.nav-menu li:last-child {
+  border-bottom-width: 1px;
+}
+
+.content-area {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  position: relative;
+  height: 100vh;
+}
+
+.content-area:before {
+  content: ' ';
+  display: block;
+  z-index: -1;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.2;
+  background-image: url(/images/BG.jpg);
+  background-repeat: no-repeat;
+  background-position: 50% 0;
+  background-size: cover;
+}
+
+.grid-outer, .grid-outer > * {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.grid-outer {
+  position: relative;
+  width: 40rem;
+  height: 40rem;
+  padding: var(--gap);
+  background-color: var(--clr-peach);
+  border-radius: 13px;
+}
+
+.grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+  height: 100%;
+  gap: var(--gap);
+}
+
+.card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  height: 100%;
+  background-color: var(--clr-light);
+  background: url(/images/cardBg.png) no-repeat;
+  background-size: cover;
+  border-radius: 5px;
+  overflow: hidden;
+  -webkit-box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2);
+}
+
+.card .card-title {
+  margin: 0;
+  font-size: var(--fs-primary);
+  font-weight: 900;
+  color: var(--clr-purple);
+  padding: 10px 12px;
+  position: relative;
+}
+
+.card .card-title::after {
+  content: '';
+  width: calc(100% - calc(2 * var(--gap)));
+  height: 1px;
+  background-color: var(--clr-purple);
+  position: absolute;
+  left: var(--gap);
+  bottom: 0;
+}
+
+.card-results {
+  padding: var(--gap);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  background-color: var(--clr-light);
+}
+
+.card-results .icon {
+  margin-right: 5px;
+}
+
+.card-time {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: var(--fs-primary);
+}
+
+.card-tasks {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.card-tasks li {
+  width: 19px;
+  height: 19px;
+  background-color: var(--clr-light);
+  border: 1px solid var(--clr-neutral);
+  color: var(--clr-neutral);
+  font-size: var(--fs-primary);
+  text-align: center;
+  line-height: 1.5;
+  border-radius: 100%;
+  margin-left: 3px;
+}
+
+.task {
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--clr-light);
+}
+
+/************************************************
+****************** TabStyles ********************
+*************************************************/
+label {
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  text-decoration: none;
+  display: inline-block;
+  color: rgba(255, 255, 255, 0.5);
+  -webkit-transition: border 0.2s;
+  transition: border 0.2s;
+  border-bottom: 5px solid rgba(var(--clr-peach), 0.2);
+  padding: 3px 2px;
+}
+
+label:hover {
+  border-bottom-color: var(--clr-peach);
+}
+
+label a {
+  color: red;
+}
+
+.layout {
+  display: -ms-grid;
+  display: grid;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  -ms-grid-rows: 50px 1fr;
+      grid-template-rows: 50px 1fr;
+  -ms-grid-columns: 1fr 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+input[type="radio"] {
+  display: none;
+}
+
+label.nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  cursor: pointer;
+  border-bottom: 2px solid var(--clr-peach);
+  background: var(--clr-purple);
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  -webkit-transition: background 0.4s, padding-left 0.2s;
+  transition: background 0.4s, padding-left 0.2s;
+  padding-left: 0;
+}
+
+input[type="radio"]:checked + .page + label.nav {
+  background: var(--clr-peach);
+  color: #ffffff;
+  padding: 0 10px;
+}
+
+input[type="radio"]:checked + .page + label.nav span {
+  padding-left: 20px;
+}
+
+input[type="radio"]:checked + .page + label.nav svg {
+  opacity: 1;
+}
+
+label.nav span {
+  padding-left: 0px;
+  position: relative;
+}
+
+label.nav svg {
+  left: 0;
+  top: -3px;
+  position: absolute;
+  width: 15px;
+  opacity: 0;
+  -webkit-transition: opacity 0.2s;
+  transition: opacity 0.2s;
+}
+
+.page {
+  -ms-grid-column: 1;
+      grid-column-start: 1;
+  -ms-grid-row: 2;
+      grid-row-start: 2;
+  -ms-grid-column-span: 4;
+      grid-column-end: span 4;
+  padding: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.page-contents > * {
+  opacity: 0;
+  -webkit-transform: translateY(20px);
+          transform: translateY(20px);
+  -webkit-transition: opacity 0.2s, -webkit-transform 0.2s;
+  transition: opacity 0.2s, -webkit-transform 0.2s;
+  transition: opacity 0.2s, transform 0.2s;
+  transition: opacity 0.2s, transform 0.2s, -webkit-transform 0.2s;
+}
+
+.page-contents > *:nth-child(1) {
+  -webkit-transition-delay: 0.4s;
+          transition-delay: 0.4s;
+}
+
+.page-contents > *:nth-child(2) {
+  -webkit-transition-delay: 0.6s;
+          transition-delay: 0.6s;
+}
+
+.page-contents > *:nth-child(3) {
+  -webkit-transition-delay: 0.8s;
+          transition-delay: 0.8s;
+}
+
+.page-contents > *:nth-child(4) {
+  -webkit-transition-delay: 1s;
+          transition-delay: 1s;
+}
+
+.page-contents > *:nth-child(5) {
+  -webkit-transition-delay: 1.2s;
+          transition-delay: 1.2s;
+}
+
+.page-contents > *:nth-child(6) {
+  -webkit-transition-delay: 1.4s;
+          transition-delay: 1.4s;
+}
+
+.page-contents > *:nth-child(7) {
+  -webkit-transition-delay: 1.6s;
+          transition-delay: 1.6s;
+}
+
+.page-contents > *:nth-child(8) {
+  -webkit-transition-delay: 1.8s;
+          transition-delay: 1.8s;
+}
+
+.page-contents > *:nth-child(9) {
+  -webkit-transition-delay: 2s;
+          transition-delay: 2s;
+}
+
+.page-contents > *:nth-child(10) {
+  -webkit-transition-delay: 2.2s;
+          transition-delay: 2.2s;
+}
+
+.page-contents > *:nth-child(11) {
+  -webkit-transition-delay: 2.4s;
+          transition-delay: 2.4s;
+}
+
+.page-contents > *:nth-child(12) {
+  -webkit-transition-delay: 2.6s;
+          transition-delay: 2.6s;
+}
+
+.page-contents > *:nth-child(13) {
+  -webkit-transition-delay: 2.8s;
+          transition-delay: 2.8s;
+}
+
+.page-contents > *:nth-child(14) {
+  -webkit-transition-delay: 3s;
+          transition-delay: 3s;
+}
+
+.page-contents > *:nth-child(15) {
+  -webkit-transition-delay: 3.2s;
+          transition-delay: 3.2s;
+}
+
+.page-contents > *:nth-child(16) {
+  -webkit-transition-delay: 3.4s;
+          transition-delay: 3.4s;
+}
+
+.page-contents > *:nth-child(17) {
+  -webkit-transition-delay: 3.6s;
+          transition-delay: 3.6s;
+}
+
+.page-contents > *:nth-child(18) {
+  -webkit-transition-delay: 3.8s;
+          transition-delay: 3.8s;
+}
+
+.page-contents > *:nth-child(19) {
+  -webkit-transition-delay: 4s;
+          transition-delay: 4s;
+}
+
+.page-contents > *:nth-child(20) {
+  -webkit-transition-delay: 4.2s;
+          transition-delay: 4.2s;
+}
+
+input[type="radio"] + .page {
+  -webkit-transition: -webkit-transform 0.2s;
+  transition: -webkit-transform 0.2s;
+  transition: transform 0.2s;
+  transition: transform 0.2s, -webkit-transform 0.2s;
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+}
+
+input[type="radio"]:checked + .page {
+  -webkit-transform: translateX(0%);
+          transform: translateX(0%);
+}
+
+input[type="radio"]:checked + .page .page-contents > * {
+  opacity: 1;
+  -webkit-transform: translateY(0px);
+          transform: translateY(0px);
+}
+
+.page-contents {
+  max-width: 100%;
+  width: 500px;
+  margin: 0 auto;
+}
+
+/************************************************
+****************** mediaQueries *****************
+*************************************************/
+@media screen and (max-width: 768px) {
+  nav {
+    display: none;
+  }
+}
