--- a/scss/style.scss
+++ b/scss/style.scss
@@ -43,7 +43,7 @@ nav {
     display: flex;
     align-items: center;
     flex-direction: column;
-    min-width: 190px;
+    min-width: 193px;
     height: 100vh;
     background-color: var(--clr-purple);
     padding: 2em 0;
@@ -125,6 +125,10 @@ nav {
     flex-grow: 1;
     position: relative;
     height: 100vh;
+
+    & .lrgap {
+        padding: 0 2em
+    }
 }
 
 .content-area:before {
@@ -137,7 +141,7 @@ nav {
     width: 100%;
     height: 100%;
     opacity: 0.2;
-    background-image: url(/images/BG.jpg);
+    background-image: url(../images/BG.jpg);
     background-repeat: no-repeat;
     background-position: 50% 0;
     background-size: cover;
@@ -151,6 +155,7 @@ nav {
     position: relative;
     width: 40rem;
     height: 40rem;
+    min-width: 34rem;
     padding: var(--gap);
     background-color: var(--clr-peach);
     border-radius: 13px;
@@ -170,8 +175,9 @@ nav {
     justify-content: space-between;
     height:100%;
     background-color: var(--clr-light);
-    background: url(/images/cardBg.png) no-repeat;
+    background: url(../images/cardBg.png) no-repeat;
     background-size: cover;
+    background-position: center;
     border-radius: 5px;
     overflow: hidden;
     cursor: pointer;
@@ -263,8 +269,9 @@ nav {
     display: flex;
     align-items: center;
     justify-content: center;
-    width:100%;
+    width: 100%;
     height: 100%;
+    border-radius: 5px;
     background-color: rgba(255,255,255,.5);
     position: absolute;
     z-index: 1;
@@ -443,9 +450,8 @@ label{
     input[type="radio"]:checked + .page + &{
       background: var(--clr-peach);
       color: #ffffff;
-      padding: 0 10px;
       span{
-        padding-left: 20px  
+        padding-left: 0px  
       }
       svg{
         opacity: 1;
@@ -453,7 +459,6 @@ label{
     }
     span{
       padding-left: 0px;
-      position: relative;
     }
     svg{
       left: 0;
@@ -511,9 +516,33 @@ label{
 ****************** mediaQueries *****************
 *************************************************/
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 880px) {
+    main {
+        flex-direction: column;
+    }
+
     nav {
-        display: none
+        flex-direction: row;
+        min-width: initial;
+        width: 100%;
+        height: initial;
+
+        & .menu-title {
+            margin: 0
+        }
+
+        & ul.nav-menu {
+            max-width: 190px;
+            margin-left: auto;
+        }
+    }
+
+    .logo {
+        height: 80px;
+    }
+
+    .menu-title {
+        margin: 0
     }
 };
     
